# hi3861_hdu_iot_application

./: .gitignore  LICENSE  README.md  物联网设计及应用实验指导手册.md
src/: NOTICE  (+1 more)
src/applications/sample/wifi-iot/app/test1/: BUILD.gn  main.c
src/applications/sample/wifi-iot/app/test1/test1/: BUILD.gn  main.c
src/base/global/i18n/frameworks/intl/: BUILD.gn
src/base/global/i18n/frameworks/intl/etc/: forbidden_languages.xml  forbidden_regions.xml  language_config.para  supported_regions.xml  white_languages.xml
src/base/global/i18n/frameworks/intl/include/: character.h  collator.h  date_time_format.h  i18n_break_iterator.h  i18n_calendar.h  i18n_timezone.h  index_util.h  locale_config.h  locale_info.h  measure_data.h  number_format.h  phone_number_format.h  plural_rules.h  relative_time_format.h  str_util.h
src/base/global/i18n/frameworks/intl/src/: character.cpp  collator.cpp  date_time_format.cpp  i18n_break_iterator.cpp  i18n_calendar.cpp  i18n_timezone.cpp  index_util.cpp  locale_config.cpp  locale_info.cpp  locale_util.cpp  measure_data.cpp  number_format.cpp  phone_number_format.cpp  plural_rules.cpp  preferred_language.cpp  relative_time_format.cpp  str_util.cpp
src/base/global/i18n/frameworks/intl/test/: BUILD.gn
src/base/global/i18n/frameworks/intl/test/unittest/: intl_test.cpp  intl_test.h  locale_config_test.cpp
src/base/global/i18n/frameworks/zone/: BUILD.gn
src/base/global/i18n/frameworks/zone/src/: zone_util.cpp
src/base/global/i18n/frameworks/zone/test/: BUILD.gn
src/base/global/i18n/frameworks/zone/test/unittest/: zone_util_performance_test.cpp  zone_util_performance_test.h  zone_util_test.cpp
src/base/global/i18n/interfaces/js/kits/: BUILD.gn
src/base/global/i18n/interfaces/js/kits/include/: i18n_addon.h  intl_addon.h
src/base/global/i18n/interfaces/js/kits/src/: i18n_addon.cpp  intl_addon.cpp
src/base/hiviewdfx/faultloggerd/test/fuzztest/: BUILD.gn  faultloggerd_fuzzer_test.cpp  faultloggerd_fuzzer_test.h  project.xml
src/base/hiviewdfx/hiappevent/frameworks/native/libhiappevent/: BUILD.gn  hiappevent_base.cpp  hiappevent_c.cpp  hiappevent_config.cpp  hiappevent_pack.cpp  hiappevent_read.cpp  hiappevent_verify.cpp  hiappevent_write.cpp
src/base/hiviewdfx/hiappevent/frameworks/native/libhiappevent/include/: hiappevent_base.h  hiappevent_c.h  hiappevent_config.h  hiappevent_pack.h  hiappevent_read.h  hiappevent_verify.h  hiappevent_write.h
src/base/hiviewdfx/hiappevent/interfaces/js/innerkits/napi/: BUILD.gn
src/base/hiviewdfx/hiappevent/interfaces/native/kits/: BUILD.gn  libhiappevent.ndk.json
src/base/hiviewdfx/hiappevent/test/: BUILD.gn
src/base/hiviewdfx/hiappevent/test/unittest/common/napi/: BUILD.gn  config.json  napi_hiappevent.test.js
src/base/hiviewdfx/hiappevent/test/unittest/common/native/: hiappevent_native_test.cpp  hiappevent_native_test.h
src/base/hiviewdfx/hisysevent/adapter/native/idl/: BUILD.gn
src/base/hiviewdfx/hisysevent/adapter/native/idl/include/: hisysevent_delegate.h  hisysevent_listener_proxy.h  hisysevent_query_proxy.h  iquery_sys_event_callback.h  isys_event_service.h  parcelable_vector_rw.h  query_sys_event_callback_proxy.h  query_sys_event_callback_stub.h  rule_type.h  string_convertor.h  sys_event_callback_stub.h  sys_event_query_rule.h  (+2 more)
src/base/hiviewdfx/hisysevent/frameworks/native/: BUILD.gn  hisysevent_tool.cpp  hisysevent_tool_listener.cpp  hisysevent_tool_query.cpp
src/base/hiviewdfx/hisysevent/frameworks/native/include/: hisysevent_tool.h  hisysevent_tool_listener.h  hisysevent_tool_query.h
src/base/security/selinux/: .gitignore  BUILD.gn  README-en.md  README.md  bundle.json
src/base/security/selinux/config/: config
src/base/security/selinux/interfaces/policycoreutils/include/: contexts_trie.h  hap_restorecon.h  hdf_service_checker.h  paraperm_checker.h  policycoreutils.h  selinux_error.h  selinux_klog.h  selinux_log.h  selinux_parameter.h  service_checker.h
src/base/security/selinux/interfaces/policycoreutils/src/: contexts_trie.cpp  hap_restorecon.cpp  load_policy.c  paraperm_checker.cpp  restorecon.c  selinux_error.cpp  selinux_klog.c  service_checker.cpp
src/base/security/selinux/interfaces/tools/hap_restorecon/: test.cpp
src/base/security/selinux/interfaces/tools/load_policy/: load_policy.c
src/base/security/selinux/interfaces/tools/param_check/: test.cpp
src/base/security/selinux/interfaces/tools/restorecon/: restorecon.c
src/base/security/selinux/interfaces/tools/service_check/: test.cpp
src/base/security/selinux/scripts/: build_contexts.py  build_policy.py  build_policy.sh  enforce_selinux.sh
src/base/security/selinux/sepolicy/: .gitignore  hdf_service_contexts  parameter_contexts  sehap_contexts  sepolicy.default.3516.conf  service_contexts
src/base/security/selinux/sepolicy/base/public/: attributes  device.te  domain.te  glb_never_def.spt  glb_perm_def.spt  glb_roles.spt  glb_te_def.spt  hap_domain.te  hdf_service.te  mls  parameter.te  policy_cap  service.te  test.te  users
src/base/security/selinux/sepolicy/base/rk3568/: accessibility.te  accesstoken_service.te  accountmgr.te  appspawn.te  audio_hdi_server_host.te  audio_policy.te  battery_stats.te  bgtaskmgr_service.te  blue_host.te  bluetooth_service.te  camera_host.te  camera_service.te  device_usage_statistics_service.te  deviceauth_service.te  deviceinfoservice.te  display_gralloc_host.te  distributeddata.te  distributedfile.te  distributedhardware_fwk.te  distributedsched.te  dslm_service.te  face_service.te  faultloggerd.te  filesystem.te  fms_service.te  foundation.te  hdcd.te  hdf_devmgr.te  hilogd.te  hiview.te  huks_service.te  init.te  input_user_host.te  inputmethod_service.te  installs.te  kernel.te  light_dal_host.te  media_service.te  medialibrary_service.te  memmgrservice.te  (+41 more)
src/base/security/selinux/sepolicy/base/system/: access_vectors  basetype.te  file.te  file_contexts  fs_use  initial_sid_contexts  initial_sids  security_classes  virtfs_contexts
src/base/security/selinux/test/: BUILD.gn
src/base/security/selinux/test/unittest/src/: selinux_unit_test.cpp  selinux_unit_test.h
(+1129 files in other folders)
