# Copyright (C) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")

ohos_unittest("selinux_unittest") {
  subsystem_name = "security"
  part_name = "selinux"
  module_out_path = part_name + "/" + part_name

  include_dirs = [
    "//utils/native/base/include",
    "//third_party/googletest/include",
    "//base/security/selinux/interfaces/policycoreutils/include",
    "//third_party/selinux/libselinux/include",
  ]

  sources = [ "unittest/src/selinux_unit_test.cpp" ]

  cflags_cc = [ "-DHILOG_ENABLE" ]

  cflags = [
    "-D_GNU_SOURCE",
    "-w",
  ]

  deps = [
    "//third_party/selinux:libselinux",
    "//utils/native/base:utils",
  ]

  external_deps = [
    "selinux:libhap_restorecon",
    "selinux:libparaperm_checker",
    "selinux:libservice_checker",
  ]
}

group("unittest") {
  testonly = true
  deps = []
}
