# Copyright (c) 2021-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

config("zone_util_public_configs") {
  include_dirs = [
    "//third_party/icu/icu4c/source",
    "//third_party/icu/icu4c/source/common",
    "//third_party/icu/icu4c/source/common/unicode",
    "//third_party/icu/icu4c/source/i18n",
    "//base/global/i18n/interfaces/native/inner_apis/zone/include",
    "//third_party/libphonenumber/cpp/src",
    "//third_party/protobuf/src",
    "//third_party/protobuf/src/google",
    "//third_party/protobuf/src/google/protobuf",
  ]
}

ohos_shared_library("zone_util") {
  public_configs = [ ":zone_util_public_configs" ]
  sources = [ "src/zone_util.cpp" ]
  cflags_cc = [
    "-Wall",
    "-fPIC",
    "-frtti",
  ]
  remove_configs = [ "//build/config/compiler:no_rtti" ]
  deps = [
    "//third_party/icu/icu4c:ohos_icudat",
    "//third_party/icu/icu4c:shared_icui18n",
    "//third_party/icu/icu4c:shared_icuuc",
    "//third_party/libphonenumber/cpp:phonenumber_standard",
  ]
  subsystem_name = "global"
  part_name = "i18n"
}
