# Copyright (c) 2021-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

config("libhiappevent_source_config") {
  visibility = [ "*:*" ]
  include_dirs = [
    "include",
    "//base/hiviewdfx/hiappevent/interfaces/native/kits/include",
    "//foundation/aafwk/standard/frameworks/kits/appkit/native/ability_runtime/context",
  ]
}

ohos_shared_library("libhiappevent_base") {
  configs = [ ":libhiappevent_source_config" ]

  sources = [
    "hiappevent_base.cpp",
    "hiappevent_c.cpp",
    "hiappevent_config.cpp",
    "hiappevent_pack.cpp",
    "hiappevent_read.cpp",
    "hiappevent_verify.cpp",
    "hiappevent_write.cpp",
  ]

  deps = [ "//foundation/aafwk/standard/frameworks/kits/appkit:app_context" ]

  external_deps = [
    "bundle_framework:appexecfwk_base",
    "hitrace_native:libhitrace",
    "hiviewdfx_hilog_native:libhilog",
  ]

  part_name = "hiappevent_native"
  subsystem_name = "hiviewdfx"
}
