# Copyright (c) 2021-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

ohos_ndk_library("libhiappevent_ndk") {
  output_name = "hiappevent_ndk"
  ndk_description_file = "./libhiappevent.ndk.json"
  min_compact_version = "1"
  system_capability = "SystemCapability.HiviewDFX.HiAppEvent"
}

ohos_ndk_headers("libhiappevent_header") {
  dest_dir = "$ndk_headers_out_dir/hiappevent"
  sources = [
    "./include/hiappevent/hiappevent.h",
    "./include/hiappevent/hiappevent_cfg.h",
    "./include/hiappevent/hiappevent_event.h",
    "./include/hiappevent/hiappevent_param.h",
  ]
}
