# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/hiviewdfx/hiview/hiview.gni")
import("//build/ohos.gni")

config("sys_event_impl_config") {
  visibility = [ "*:*" ]

  include_dirs = [
    ".",
    "include",
  ]
}

ohos_source_set("sys_event_impl_client") {
  include_dirs = [
    "include",
    "//third_party/bounds_checking_function/include",
  ]

  sources = [
    "src/hisysevent_delegate.cpp",
    "src/hisysevent_listener_proxy.cpp",
    "src/hisysevent_query_proxy.cpp",
  ]

  public_configs = [ "//base/hiviewdfx/hisysevent/interfaces/native/innerkits/hisysevent_manager:hisyseventmanager_config" ]

  deps = [ "//utils/native/base:utils" ]

  external_deps = [
    "hilog_native:libhilog",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr_standard:samgr_proxy",
  ]

  part_name = "hisysevent_native"
  subsystem_name = "hiviewdfx"
}

ohos_source_set("sys_event_service_gen_src_client") {
  include_dirs = [
    "include",
    "//third_party/bounds_checking_function/include",
    "//utils/system/safwk/native/include",
  ]

  sources = [
    "src/query_sys_event_callback_proxy.cpp",
    "src/query_sys_event_callback_stub.cpp",
    "src/sys_event_callback_proxy.cpp",
    "src/sys_event_callback_stub.cpp",
    "src/sys_event_query_rule.cpp",
    "src/sys_event_rule.cpp",
    "src/sys_event_service_proxy.cpp",
    "src/sys_event_service_stub.cpp",
  ]

  deps = [ "//utils/native/base:utils" ]

  external_deps = [
    "hilog_native:libhilog",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr_standard:samgr_proxy",
  ]

  part_name = "hisysevent_native"
  subsystem_name = "hiviewdfx"
}
