# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

ohos_shared_library("hitracechain_napi") {
  include_dirs = [
    ".",
    "include/",
    "//third_party/node/src",
  ]

  configs = []

  sources = [
    "./src/napi_hitrace_init.cpp",
    "./src/napi_hitrace_js.cpp",
    "./src/napi_hitrace_native_call_wrapper.cpp",
    "./src/napi_hitrace_util.cpp",
  ]

  deps = [ "//foundation/ace/napi:ace_napi" ]

  external_deps = [
    "hilog_native:libhilog",
    "hitrace_native:libhitrace",
  ]

  relative_install_dir = "module"

  part_name = "hitrace_native"

  subsystem_name = "hiviewdfx"
}
